manifests/overlays/prod/patch-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ysmedi
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: ysmedi
          ports:
            - name: http
              containerPort: 10150
