manifests/overlays/prod/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ysmedi
spec:
  ports:
    - name: http
      port: 10150
