manifests/overlays/prod/patch-networking.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ysmedi
spec:
  gateways:
    - istio-system/yeoshin-gateway-public
  hosts:
    - "www.ysmedi.kr"
    - "www.lhalala.kr"
  http:
    - timeout: 15s
      route:
        - destination:
            host: yeoshin-ysmedi.yeoshin-prod.svc.cluster.local
            port:
              number: 10150
      retries:
        attempts: 0
